@@ -1,5 +1,14 @@
 2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	If error event is received in epoll, then abort download immediately.
+	* src/AbstractCommand.cc
+	* src/Command.cc
+	* src/Command.h
+	* src/DownloadEngine.cc
+	* src/PeerAbstractCommand.cc
+	
+2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	Added usage message for --uri-selector, --server-stat-of,
 	--server-stat-in, --server-stat-timeout options.
 	* src/HelpItemFactory.cc
